style: fix aside z-index

--- a/frontend/public/styles/main.css
+++ b/frontend/public/styles/main.css
@@ -304,6 +304,7 @@ h1 {
         width: 50%;
         height: 100%;
         position: absolute;
+        z-index: 2;
     }
 
     h1 {
